# cpp_otus_t2

./: .travis.yml  CMakeLists.txt  filter.cpp  filter.h  filter_test.cpp  main.cpp
